# iotdb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  code_gen.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo_fmt.yml  cargo_publish.yml  cargo_test.yml
examples/: iotdb.rs  main.rs
src/: client.rs  common.rs  dataset.rs  db.rs  ds.rs  errors.rs  iotdb.rs  lib.rs  pretty.rs  rpc.rs  session.rs  table.rs  util.rs  utils.rs
thrift/: rpc.thrift
