[package]
name = "iotdb"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["francis-du <francis@francisdu.com>"]
repository = "https://github.com/francis-du/iotdb-rs"
documentation = "https://docs.rs/iotdb"
description = "Apache IotDB Client written in Rust"
keywords = ["client", "iotdb", "lib", "db"]

[dependencies]
byteorder = "1"
chrono = "0.4"
thrift = "0.15"
log = "0.4.13"
fern = "0.6.0"
prettytable-rs = "^0.8"
polars = "0.17.0"