[package]
name = "iotdb"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["francis-du <francis@francisdu.com>"]
repository = "https://github.com/iotdb-lab/iotdb-rs"
documentation = "https://docs.rs/iotdb"
description = "Apache IotDB Client written in Rust"
keywords = ["client", "iotdb", "lib", "db"]

[dependencies]
byteorder = "1"
chrono = "0.4"
thrift = "0.15"
log = "0.4.13"
prettytable-rs = "^0.8"
polars = "0.19.1"
anyhow = "1.0.53"
thiserror = "1.0"
mimalloc = { version = "*", default-features = false }

[dev-dependencies]
simplelog = "0.11.0"